[package]
name = "dsa-engine"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tonic =  "0.11"
prost = "0.12"
tonic-reflection = "0.11.0"
proto = "0.1.2"
bollard = { version = "0.18.1"}
futures-util = "0.3.31"
tokio-util = "0.7.15"
hyper = "0.14"
tar = "0.4.44"
reqwest = "0.12.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
once_cell = "1.19"
ctrlc = "3"
uuid = {version = "1.16.0", features = ["v4"]}
async-trait = "0.1.80"

# WebSocket related
tokio-tungstenite = "*"                     # async websocket server/client
tungstenite = "0.20"                               # underlying websocket protocol support





[build-dependencies]
tonic-build = "0.11.0"